--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
-    "yup": "^1.4.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
