--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.8",
     "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
